the hero section is starting to take shape finally

--- a/gdsc-website/index.html
+++ b/gdsc-website/index.html
@@ -1,21 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <!-- ADDING THE FAVICON BELOW -->
-    <link rel="shortcut icon" href="./src/assets/svg/google-developers-seeklogo.com.svg" type="image/x-icon">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+
+  <!-- ADDING THE FAVICON BELOW -->
+  <link rel="shortcut icon" href="./src/assets/svg/google-developers-seeklogo.com.svg" type="image/x-icon">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- FONTS HERE -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Borel&family=Courgette&family=Dancing+Script&family=Jost&family=Montserrat&family=Open+Sans&family=Pacifico&family=Poppins&family=Satisfy&family=Sora&family=Ubuntu&display=swap"
+    rel="stylesheet">
 
 
-    <!-- TITLE BELOW HERE -->
-    <title>GDSC UEM Jaipur</title>
+    <link rel="stylesheet" href="./src/indexOutput.css">
+    <link rel="stylesheet" href="./src/index.css">
 
-    
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+  <!-- TITLE BELOW HERE -->
+  <title>GDSC UEM Jaipur</title>
+
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
