the landing page is nearly done

--- a/gdsc-website/index.html
+++ b/gdsc-website/index.html
@@ -13,12 +13,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Borel&family=Courgette&family=Dancing+Script&family=Jost&family=Montserrat&family=Open+Sans&family=Pacifico&family=Poppins&family=Satisfy&family=Sora&family=Ubuntu&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Borel&family=Courgette&family=Dancing+Script&family=JetBrains+Mono&family=Jost&family=Montserrat&family=Open+Sans&family=Pacifico&family=Poppins&family=Satisfy&family=Sora&family=Ubuntu&display=swap"
     rel="stylesheet">
 
 
-    <link rel="stylesheet" href="./src/indexOutput.css">
-    <link rel="stylesheet" href="./src/index.css">
+  <link rel="stylesheet" href="./indexOutput.css">
+  <!-- <link rel="stylesheet" href="./src/index.css"> -->
 
 
   <!-- TITLE BELOW HERE -->
