minor bug fixes

--- a/gdsc-website/index.html
+++ b/gdsc-website/index.html
@@ -28,6 +28,12 @@
 </head>
 
 <body>
+  <script>
+    alert(`This website is not responsive so to view this website as intended and for the best viewing experience\n 
+    step1: right Click and choose "inspect elements" from the drop down\n
+    step2: then go to the center top part of the window and give the dimensions\n
+    1880 X 857`);
+  </script>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
